update post fail

--- a/build.properties
+++ b/build.properties
@@ -3,3 +3,4 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .
+ECLIPSE_HOME=/home/richard/eclipses/eclipse
