--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="tests"/>
+	<classpathentry excluding="*.scala|test/" kind="src" path="src"/>
 	<classpathentry kind="src" path="progs"/>
 	<classpathentry kind="lib" path="lib/asm-all-3.2.jar"/>
 	<classpathentry kind="lib" path="lib/ScalaCheck-1.5.jar"/>
