implemented method predicate and started work on type predicate

--- a/build.xml
+++ b/build.xml
@@ -105,6 +105,7 @@
         <javac
             srcdir="src"
             destdir="bin"
+            debug="true"
             classpathref="FixbugsPlugin.classpath" />
         <scalac srcdir="src"
             destdir="bin"
